--- a/index.html
+++ b/index.html
@@ -3,90 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mods Playable</title>
+  <title>Minecraft Mods Playable</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
-      background-color: #111;
-      color: white;
+      background: url('https://i.imgur.com/o5uMfKo.png') repeat;
+      font-family: 'Press Start 2P', cursive;
+      color: #fff;
       text-align: center;
     }
+
     .container {
       padding: 20px;
     }
+
     h1 {
       margin-bottom: 10px;
+      font-size: 16px;
+      color: #00ff00;
+      text-shadow: 1px 1px #000;
     }
+
     .mod-list {
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 10px;
       margin-bottom: 20px;
     }
+
     .mod-item {
-      background: #222;
-      margin: 5px;
-      padding: 10px 20px;
+      background: #333 url('https://i.imgur.com/nW8h20v.png') repeat;
+      padding: 10px;
+      width: 90%;
+      max-width: 300px;
+      border: 2px solid #555;
       border-radius: 8px;
-      width: 80%;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 0 5px #000;
+    }
+
+    .mod-item img {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border: 1px solid #888;
+    }
+
+    .mod-item label {
+      flex-grow: 1;
       text-align: left;
     }
+
     .button {
       padding: 12px 24px;
-      background: #00c853;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
+      background: #00aa00;
+      border: 3px solid #003300;
+      border-radius: 4px;
+      font-size: 14px;
       color: white;
-      font-weight: bold;
       cursor: pointer;
+      box-shadow: inset -2px -2px 0 #003300;
     }
+
     .button:disabled {
       background: #444;
+      border-color: #222;
       cursor: not-allowed;
     }
+
     #loading {
       display: none;
       flex-direction: column;
       align-items: center;
       margin-top: 40px;
     }
+
     .bar {
       width: 80%;
       height: 20px;
-      background: #333;
-      border-radius: 10px;
-      overflow: hidden;
+      background: #000;
+      border: 2px solid #555;
       margin-top: 20px;
     }
+
     .progress {
       height: 100%;
       width: 0%;
-      background: #00c853;
+      background: #00cc00;
       transition: width 2s linear;
     }
+
     #cta {
       display: none;
       margin-top: 30px;
-      background: #ff3b3b;
+      background: #ff0000;
+      border: 3px solid #660000;
     }
   </style>
 </head>
 <body>
   <div class="container" id="main">
-    <h1>Select Mods</h1>
+    <h1>Select Your Mods</h1>
     <div class="mod-list">
-      <label class="mod-item"><input type="checkbox" /> One Block</label>
-      <label class="mod-item"><input type="checkbox" /> Lucky Block</label>
-      <label class="mod-item"><input type="checkbox" /> SkyBlock</label>
-      <label class="mod-item"><input type="checkbox" /> Furniture Mod</label>
+      <div class="mod-item">
+        <img src="https://i.imgur.com/yZ8zACy.png" alt="One Block">
+        <label><input type="checkbox" /> One Block</label>
+      </div>
+      <div class="mod-item">
+        <img src="https://i.imgur.com/1UrU9R1.png" alt="Lucky Block">
+        <label><input type="checkbox" /> Lucky Block</label>
+      </div>
+      <div class="mod-item">
+        <img src="https://i.imgur.com/MP3gXuE.png" alt="SkyBlock">
+        <label><input type="checkbox" /> SkyBlock</label>
+      </div>
+      <div class="mod-item">
+        <img src="https://i.imgur.com/SUelL7k.png" alt="Furniture Mod">
+        <label><input type="checkbox" /> Furniture Mod</label>
+      </div>
     </div>
     <button class="button" id="installBtn" disabled>Install</button>
   </div>
 
   <div id="loading">
-    <h2>Installing Mods...</h2>
+    <h2 style="color: #00ff00;">Installing...</h2>
     <div class="bar">
       <div class="progress" id="progressBar"></div>
     </div>
@@ -101,7 +145,6 @@
     const main = document.getElementById("main");
     const cta = document.getElementById("cta");
 
-    // Enable install button only if at least one mod selected
     checkboxes.forEach(cb => {
       cb.addEventListener("change", () => {
         const anyChecked = Array.from(checkboxes).some(cb => cb.checked);
@@ -112,7 +155,6 @@
     installBtn.addEventListener("click", () => {
       main.style.display = "none";
       loading.style.display = "flex";
-      // Trigger animation
       setTimeout(() => {
         progressBar.style.width = "100%";
       }, 100);
