--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>One Block Mods</title>
   <style>
-    @font-face {
-      font-family: 'PressStart2P';
-      src: url('fonts/PressStart2P.woff2') format('woff2');
-      font-weight: normal;
-      font-style: normal;
-    }
-
     html, body {
       margin: 0;
       padding: 0;
-      font-family: 'PressStart2P', sans-serif;
-      color: #fff;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      font-family: 'Arial', sans-serif;
+      background: url('images/background.png') no-repeat center center fixed;
       background-size: cover;
+      color: #fff;
       text-align: center;
     }
 
@@ -33,7 +26,7 @@
 
     h1 {
       color: #00ff00;
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 20px;
       text-shadow: 1px 1px #000;
     }
@@ -75,7 +68,7 @@
     .mod-item label {
       flex-grow: 1;
       text-align: left;
-      font-size: 10px;
+      font-size: 12px;
       color: #fff;
       cursor: pointer;
     }
@@ -85,11 +78,10 @@
       background: #00aa00;
       border: 2px solid #003300;
       border-radius: 6px;
-      font-size: 12px;
+      font-size: 14px;
       color: white;
       cursor: pointer;
-      font-family: 'PressStart2P', cursive;
-      text-transform: uppercase;
+      font-weight: bold;
     }
 
     .button:disabled {
