--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     /* 🧱 Підключення локального Minecraft-подібного шрифту */
     @font-face {
       font-family: 'PressStart2P';
-      src: url('fonts/PressStart2P.woff2') format('woff2');
+      src: url('fonts/PressStart2P.ttf') format('ttf');
       font-weight: normal;
       font-style: normal;
     }
