--- a/index.html
+++ b/index.html
@@ -82,15 +82,17 @@
     }
 
     .button {
-      padding: 12px 24px;
-      background: #00aa00;
-      border: 2px solid #003300;
-      border-radius: 6px;
-      font-size: 10px;
-      color: white;
-      cursor: pointer;
-      text-transform: uppercase;
-    }
+  padding: 12px 24px;
+  background: #00aa00;
+  border: 2px solid #003300;
+  border-radius: 6px;
+  font-size: 10px;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: 'PressStart2P', sans-serif;
+  letter-spacing: 1px;
+}
 
     .button:disabled {
       background: #444;
