--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@ color:#fff;text-align:center;}
     .mod-item label{flex-grow:1;text-align:left;font-size:10px;color:#fff;}
     input[type=checkbox]{width:18px;height:18px;accent-color:#0f0;}
     img{width:40px;height:40px;pointer-events:none;}
-    .button{padding:12px 24px;background:#0a0;border:2px solid #030;border-radius:6px;font-size:10px;color:#fff;cursor:pointer;text-transform:uppercase;margin-top:20px;letter-spacing:1px;}
+    .button {
+      padding:12px 24px;
+      background:#0a0;
+      border:2px solid #030;
+      border-radius:6px;
+      font-family: 'PressStart2P', sans-serif;
+      font-size:10px;
+      color:#fff;
+      cursor:pointer;
+      text-transform:uppercase;
+      margin-top:20px;
+      letter-spacing:1px;
+    }
     .button:disabled{background:#444;border-color:#222;cursor:not-allowed;
 font-family: 'PressStart2P', sans-serif;
 }
