--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: auto;
+      height: 100%;
       font-family: 'PressStart2P', sans-serif;
       background-size: cover;
-      color: #fff;
-      text-align: center;
-      overflow-x: hidden;
-      overflow-y: scroll;
-      /* ← примусовий скрол */
+      overflow: auto;
       -webkit-overflow-scrolling: touch;
+      touch-action: pan-y;
     }
 
     body {
@@ -62,19 +59,21 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* ← Центрує моди */
       gap: 12px;
+      width: 100%;
     }
 
     .mod-item {
-      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      width: 90%;
+      max-width: 320px;
+      background: rgba(0, 0, 0, 0.6);
       padding: 10px;
       border: 2px solid #555;
       border-radius: 8px;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      cursor: pointer;
+      box-sizing: border-box;
     }
 
     .mod-item label {
