--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
       touch-action: pan-y;
     }
 
+
     body {
       display: block;
-      overflow-y: auto;
+      overflow-y: scroll;
       -webkit-overflow-scrolling: touch;
+    }
+
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.4);
+      /* світлий напівпрозорий білий */
+      border-radius: 3px;
     }
 
     .wrapper {
